[package]
name = "solana-bpf-loader-program"
version = "1.5.0"
description = "Solana BPF loader"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
bincode = "1.3.1"
byteorder = "1.3.4"
curve25519-dalek = "3"
num-derive = "0.3"
num-traits = "0.2"
solana-runtime = { path = "../../runtime", version = "1.5.0" }
solana-sdk = { path = "../../sdk", version = "1.5.0" }
solana_rbpf = "=0.2.13"
thiserror = "1.0"

toml-config = { path = "../../toml-config" }
serde_derive = "1.0.117"
lazy_static = "1.4.0"
serde = "1.0.117"

[dev-dependencies]
rand = "0.7.3"
rustversion = "1.0.3"

[lib]
crate-type = ["lib"]
name = "solana_bpf_loader_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
